unpackaged/main/default/objects/Plaid_Verification__c/Plaid_Verification__c.object-meta.xml
<CustomObject>
    <label>Plaid Verification</label>
    <nameField>
        <displayFormat>PV-{MM}{DD}{YYYY}-{000000}</displayFormat>
        <label>Plaid Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plaid Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>