unpackaged/main/default/objects/Plaid_Verification__c/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <description>risk_check.behavior.user_interactions</description>
    <inlineHelpText>This value represents how familiar the user is with the personal data they provide, based on a number of signals that are collected during their session</inlineHelpText>
    <label>Behavior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>