unpackaged/main/default/objects/Plaid_Verification__c/fields/Bot_Detection__c.field-meta.xml
<CustomField>
    <fullName>Bot_Detection__c</fullName>
    <description>risk_check.behavior.bot_detected</description>
    <inlineHelpText>Field describing the outcome of a bot detection behavior risk check</inlineHelpText>
    <label>Bot Detection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>