unpackaged/main/default/objects/Plaid_Verification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Plaid Verifications</relationshipLabel>
    <relationshipName>Plaid_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>