unpackaged/main/default/objects/Plaid_Verification__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>user.date_of_birth</description>
    <inlineHelpText>User Date of Birth</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>