unpackaged/main/default/objects/Plaid_Verification__c/fields/Document_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_ID_Type__c</fullName>
    <description>user.id_number.type</description>
    <inlineHelpText>Type of document submitted by user</inlineHelpText>
    <label>Document ID Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>