unpackaged/main/default/objects/Plaid_Verification__c/fields/Domain_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Domain_Registration_Date__c</fullName>
    <description>risk_check.email.domain_registered_at</description>
    <inlineHelpText>Domain registration date</inlineHelpText>
    <label>Domain Registration Date</label>
    <type>Date</type>
</CustomField>