unpackaged/main/default/objects/Plaid_Verification__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>user.email_address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>