unpackaged/main/default/objects/Plaid_Verification__c/fields/Email_Breach_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Breach_Count__c</fullName>
    <description>risk_check.email.breach_count</description>
    <inlineHelpText>Count of all known breaches of this email address if known</inlineHelpText>
    <label>Email Breach Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>