unpackaged/main/default/objects/Plaid_Verification__c/fields/Email_Domain_is_Disposable__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_is_Disposable__c</fullName>
    <description>risk_check.email.domain_is_disposable</description>
    <inlineHelpText>Indicates whether the email domain is listed as a known disposable domain</inlineHelpText>
    <label>Email Domain is Disposable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>