unpackaged/main/default/objects/Plaid_Verification__c/fields/Email_Domain_Provider_is_Free__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Provider_is_Free__c</fullName>
    <description>risk_check.email.domain_is_free_provider</description>
    <inlineHelpText>Indicates whether the email address domain is a free provider such as Gmail or Hotmail if known</inlineHelpText>
    <label>Email Domain Provider is Free</label>
    <length>255</length>
    <type>Text</type>
</CustomField>