unpackaged/main/default/objects/Plaid_Verification__c/fields/Email_First_Breached__c.field-meta.xml
<CustomField>
    <fullName>Email_First_Breached__c</fullName>
    <description>risk_check.email.first_breached_at</description>
    <inlineHelpText>Date first breached</inlineHelpText>
    <label>Email First Breached</label>
    <type>Date</type>
</CustomField>