unpackaged/main/default/objects/Plaid_Verification__c/fields/Email_Last_Breached__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_Breached__c</fullName>
    <description>risk_check.email.last_breached_at</description>
    <inlineHelpText>Date last breached</inlineHelpText>
    <label>Email Last Breached</label>
    <type>Date</type>
</CustomField>