unpackaged/main/default/objects/Plaid_Verification__c/fields/Email_Linked_Services__c.field-meta.xml
<CustomField>
    <fullName>Email_Linked_Services__c</fullName>
    <description>risk_check.email.linked_services</description>
    <inlineHelpText>A list of online services where this email address has been detected to have accounts or other activity</inlineHelpText>
    <label>Email Linked Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>