unpackaged/main/default/objects/Plaid_Verification__c/fields/Fraud_Ring__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Ring__c</fullName>
    <description>risk_check.behavior.fraud_ring_detected</description>
    <inlineHelpText>Field describing the outcome of a fraud ring behavior risk check</inlineHelpText>
    <label>Fraud Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>