unpackaged/main/default/objects/Plaid_Verification__c/fields/KYC_Address__c.field-meta.xml
<CustomField>
    <fullName>KYC_Address__c</fullName>
    <description>kyc_check.address.summary</description>
    <inlineHelpText>Result summary specifying how the address field matched.</inlineHelpText>
    <label>KYC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>