unpackaged/main/default/objects/Plaid_Verification__c/fields/KYC_Address_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>KYC_Address_PO_Box__c</fullName>
    <description>kyc_check.address.po_box</description>
    <inlineHelpText>Field describing whether the associated address is a post office box</inlineHelpText>
    <label>KYC Address PO Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>