unpackaged/main/default/objects/Plaid_Verification__c/fields/KYC_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>KYC_Address_Type__c</fullName>
    <description>kyc_check.type</description>
    <inlineHelpText>Describes whether the address is being used for commercial or residential purposes</inlineHelpText>
    <label>KYC Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>