unpackaged/main/default/objects/Plaid_Verification__c/fields/KYC_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Check_Status__c</fullName>
    <description>steps.kyc_check</description>
    <inlineHelpText>The status of KYC Check step</inlineHelpText>
    <label>KYC Check Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>