unpackaged/main/default/objects/Plaid_Verification__c/fields/KYC_Name__c.field-meta.xml
<CustomField>
    <fullName>KYC_Name__c</fullName>
    <description>kyc_check.name.summary</description>
    <inlineHelpText>Result summary specifying how the name field matched</inlineHelpText>
    <label>KYC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>