unpackaged/main/default/objects/Plaid_Verification__c/fields/KYC_Phone__c.field-meta.xml
<CustomField>
    <fullName>KYC_Phone__c</fullName>
    <description>kyc_check.phone_number.summary</description>
    <inlineHelpText>Result summary specifying how the phone field matched</inlineHelpText>
    <label>KYC Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>