unpackaged/main/default/objects/Plaid_Verification__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Plaid Verifications</relationshipLabel>
    <relationshipName>Plaid_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>