unpackaged/main/default/objects/Plaid_Verification__c/fields/Phone_Linked_Services__c.field-meta.xml
<CustomField>
    <fullName>Phone_Linked_Services__c</fullName>
    <description>risk_check.phone.linked_services</description>
    <inlineHelpText>A list of online services where this phone number has been detected to have accounts or other activity.</inlineHelpText>
    <label>Phone Linked Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>