unpackaged/main/default/objects/Plaid_Verification__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>user.phone_number</description>
    <inlineHelpText>User Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>