unpackaged/main/default/objects/Plaid_Verification__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>user.address.postal_code</description>
    <inlineHelpText>User home postal code</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>