unpackaged/main/default/objects/Plaid_Verification__c/fields/Redacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Redacted_Date__c</fullName>
    <description>redacted_at</description>
    <inlineHelpText>Time when sensitive information was redacted for privacy or security reasons.</inlineHelpText>
    <label>Redacted Date</label>
    <type>DateTime</type>
</CustomField>