unpackaged/main/default/objects/Plaid_Verification__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <description>request_id</description>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>