unpackaged/main/default/objects/Plaid_Verification__c/fields/Risk_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Check_Status__c</fullName>
    <description>steps.risk_check</description>
    <inlineHelpText>Status of risk check step</inlineHelpText>
    <label>Risk Check Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>