unpackaged/main/default/objects/Plaid_Verification__c/fields/Shareable_URL__c.field-meta.xml
<CustomField>
    <fullName>Shareable_URL__c</fullName>
    <description>shareable_url</description>
    <inlineHelpText>A shareable URL that can be sent directly to the user to complete verification</inlineHelpText>
    <label>Shareable URL</label>
    <type>Url</type>
</CustomField>