unpackaged/main/default/objects/Plaid_Verification__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>user.address.region</description>
    <inlineHelpText>User home state</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>