unpackaged/main/default/objects/Plaid_Verification__c/fields/Synthetic_Identity_Score__c.field-meta.xml
<CustomField>
    <fullName>Synthetic_Identity_Score__c</fullName>
    <description>risk_check.identity_abuse_signals.synthetic_identity.score</description>
    <inlineHelpText>A score from 0 to 100 indicating the likelihood that the user is a synthetic identity.</inlineHelpText>
    <label>Synthetic Identity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>