unpackaged/main/default/objects/Plaid_Verification__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>template.id  and template.version</description>
    <inlineHelpText>Plaid Template ID and Version</inlineHelpText>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>