unpackaged/main/default/objects/Plaid_Verification__c/fields/Verification_Download__c.field-meta.xml
<CustomField>
    <fullName>Verification_Download__c</fullName>
    <inlineHelpText>Link to download files related to verification attempt</inlineHelpText>
    <label>Verification Download</label>
    <type>Url</type>
</CustomField>