unpackaged/main/default/objects/Plaid_Verification__c/fields/Verification_ID__c.field-meta.xml
<CustomField>
    <fullName>Verification_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>id field from Plaid response</description>
    <inlineHelpText>ID of the associated Identity Verification attempt</inlineHelpText>
    <label>Verification ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>