unpackaged/main/default/objects/Plaid_Verification__c/fields/Watchlist_Screening_ID__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Screening_ID__c</fullName>
    <description>watchlist_screening_id</description>
    <label>Watchlist Screening ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>