unpackaged/main/default/objects/Plaid_Verification__c/fields/Watchlist_Screening_Status__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Screening_Status__c</fullName>
    <description>steps.watchlist_screening</description>
    <inlineHelpText>Status of watchlist screening step</inlineHelpText>
    <label>Watchlist Screening Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>